# panelCanvaEsc

./: nuxt.config.ts  package-lock.json  package.json
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: MiniMap.vue  NotificationsSlideover.vue  Panel.vue  SlideoverConfigEstadistica.vue  SlideoverConfigGrafico.vue  SlideoverConfigTabla.vue  TeamsMenu.vue  UserMenu.vue
app/components/Dashboard/: DashboardContainer.vue  DashboardControls.vue  DashboardPanel.vue  NewBoard.vue
app/components/auth/form/: login.vue
app/components/chart/: line-chart.vue
app/components/panels/: PanelCalendario.vue  PanelEstadistica.vue  PanelGrafico.vue  PanelLista.vue  PanelMapa.vue  PanelNotas.vue  PanelTabla.vue  index.ts
app/composables/: useCanvasPan.ts  useDashboard.ts  useGlobalDataStore.ts  usePanelAlignment.ts  usePanelComponent.ts  usePanelDrag.ts  usePanelManager.ts  usePanelResize.ts
app/layouts/: board.vue
app/pages/: index.vue
app/pages/board/: CreateBoard.vue  index.vue
app/types/: board.ts  globalData.ts  panel.ts
app/utils/: panelHelpers.ts
src-tauri/: Cargo.toml  shema.sql  tauri.conf.json
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: auth.rs  board.rs  mod.rs  stats.rs
src-tauri/src/models/: board.rs  database.rs  mod.rs  stats.rs  user.rs
